chang postition of button

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#0a0a0a" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <title>Balu – Twoja Panda 🐼</title>
+    <title>Balu 🐼</title>
     <meta name="description" content="Balu - Spokojna panda w dżungli" />
 
     <meta property="og:title" content="Balu – Twoja Panda" />
